# elements

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  mac.yml  main.yml
cmake/macros/: macro_setup_problem.cmake  macro_setup_test.cmake
src/: CMakeLists.txt  compound.cpp  compound.hpp  constants.hpp  element.cpp  element.hpp  elements.cpp  elements.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_composition.cpp
